corrected whitespace by non-link

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -78,7 +78,7 @@ a:hover { text-decoration: underline; }
     overflow: hidden;
 }
 .video-container iframe {
-    position: absolute;
+    position: relative;
     top:0;
     left: 0;
     width: 100%;
